added logic to detect the env by file and global variable

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,7 @@
+detector:
+  - global
 environments:
-  production
-  prelive
-  development
-  test
+  - production
+  - prelive
+  - development
+  - test
