added unit tests - fixed issues as result of unit test

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,7 +1,7 @@
-detector:
-  - global
+detector: global
 environments:
-  - production
-  - prelive
   - development
-  - test
+  - testing
+  - quality-assurance
+  - staging
+  - production
