--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "symfony/yaml": "2.6.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.5.*@dev",
+        "phpunit/phpunit": "~4.6",
+        "mikey179/vfsStream": "~1",
         "behat/behat": "3.0.*@dev"
     },
     "autoload": {
