--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,43 @@
 {
-    "name": "powerlinks/environment",
-    "type": "library",
-    "description": "",
-    "keywords": ["powerlinks", "environment"],
-    "homepage": "http://www.powerlinks.com/",
-    "license": "proprietary",
-    "authors": [
-        {
-            "name": "Manuel Kanah",
-            "email": "manuel@powerlinks.com",
-            "homepage": "http://www.powerlinks.com/",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php": ">=5.4.0",
-        "symfony/yaml": "2.6.*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~4.6",
-        "mikey179/vfsStream": "~1",
-        "behat/behat": "3.0.*@dev"
-    },
-    "autoload": {
-        "psr-4": {
-          "PowerLinks\\Environment\\": "src/",
-          "PowerLinks\\Environment\\Tests\\": "tests/"
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0.x-dev"
-        }
+  "name": "powerlinks/environment",
+  "type": "library",
+  "description": "",
+  "keywords": ["powerlinks", "environment"],
+  "homepage": "http://www.powerlinks.com/",
+  "license": "proprietary",
+  "authors": [
+    {
+      "name": "Manuel Kanah",
+      "email": "manuel@powerlinks.com",
+      "homepage": "http://www.powerlinks.com/",
+      "role": "Developer"
     }
+  ],
+  "require": {
+    "php": ">=5.4.0",
+    "symfony/yaml": "2.6.*",
+    "tedivm/stash": "0.13.*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.7",
+    "mikey179/vfsStream": "~1",
+    "behat/behat": "3.0.*@dev"
+  },
+  "autoload": {
+    "psr-4": {
+      "PowerLinks\\Environment\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "PowerLinks\\Environment\\Tests\\": "tests/"
+    }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0.x-dev"
+    }
+  }
 }
